fixing scrollbar on windows

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,56 +1,53 @@
 app-scenario-info {
-    width: 35%;
-    /* height: calc(100vh - 64px); */
-    overflow-y: scroll;
-  }
-  app-tree {
-    height: 100vh;
-  }
-  app-tree {
-    width: 65%;
-    /* height: calc(100vh - 64px); */
-    border-left: 1px solid #ccc;
-  }
-  mat-toolbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 2;
-    box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
-      0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
-  }
-  mat-toolbar .nav-row {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-  }
+  width: 35%;
+  height: 100vh;
+  overflow-y: auto;
+}
+app-tree {
+  width: 65%;
+  height: 100vh;
+  border-left: 1px solid #ccc;
+}
+mat-toolbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
+    0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+}
+mat-toolbar .nav-row {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (max-width: 1023px) {
   .wrapper {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-around;
-    align-items: flex-start;
+    flex-direction: column;
+  }
+  app-scenario-info {
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    height: auto;
+    overflow: unset;
+    order: 2;
   }
-  @media (max-width: 1023px) {
-    .wrapper {
-      flex-direction: column;
-    }
-    app-scenario-info {
-      width: 100%;
-      height: auto;
-      overflow: unset;
-      order: 2;
-    }
-    app-tree {
-      width: 100%;
-      max-width: 100%;
-      height: 70vh;
-      order: 1;
-      border-left: 0;
-      border-bottom: 1px solid #ccc;
-    }
+  app-tree {
+    width: 100%;
+    max-width: 100%;
+    height: 70vh;
+    order: 1;
+    border-left: 0;
+    border-bottom: 1px solid #ccc;
   }
+}
